# BGC_Portal/src/app/api/models/game-dto.ts
@@ -4,8 +4,10 @@ import { GameVersionDto } from './game-version-dto';
 export interface GameDto {
   description?: null | string;
   gameId?: number;
+  imageLink?: null | string;
   maxNumberPlayers?: null | number;
   minNumberPlayers?: null | number;
   name?: null | string;
   versions?: null | Array<GameVersionDto>;
+  year?: null | number;
 }
