# BGC_WebApi/BGC_DataAccess/Entities/Game.cs
@@ -12,7 +12,8 @@ public class Game
     public int GameId { get; set; } 
     public string Name { get; set; }
     public string? Description { get; set; }
-
+    public int? Year { get; set; }
+    public string? ImageLink { get; set; }
     public int? MinNumberPlayers { get; set; }
     public int? MaxNumberPlayers { get; set; }
 
